# notebot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  notebot.code-workspace  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: prototype.ipynb
notebot/: app.py  constants.py  main.py
